--- a/example/page1.html
+++ b/example/page1.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Content page 1</title>
+	<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 </head>
 <body>
+	<h1>tableOfPages</h1>
+	<p>tableOfPages is a simple script, adding a table of available pages to your project.</p>
 	<p>Tote bag flexitarian kogi cardigan Vice, hella DIY Etsy skateboard quinoa. Leggings listicle flexitarian, biodiesel narwhal Helvetica selfies you probably haven't heard of them Carles next level jean shorts pug. Yr literally plaid, Pitchfork typewriter synth squid sustainable Williamsburg salvia leggings. Twee Pinterest hella Brooklyn, swag mumblecore Schlitz flannel fingerstache narwhal readymade iPhone. Williamsburg tote bag lumbersexual, heirloom Godard VHS street art. Godard small batch fingerstache fashion axe distillery, migas cold-pressed locavore Neutra kogi messenger bag readymade. Typewriter PBR&B banjo, Carles readymade leggings viral Tumblr Austin butcher.</p>
 
 
