--- a/example/foo.html
+++ b/example/foo.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>foo bar baz page</title>
+	<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 </head>
 <body>
+	<h1>tableOfPages</h1>
+	<p>tableOfPages is a simple script, adding a table of available pages to your project.</p>
 	<p>Tote bag flexitarian kogi cardigan Vice, hella DIY Etsy skateboard quinoa. Leggings listicle flexitarian, biodiesel narwhal Helvetica selfies you probably haven't heard of them Carles next level jean shorts pug. Yr literally plaid, Pitchfork typewriter synth squid sustainable Williamsburg salvia leggings. Twee Pinterest hella Brooklyn, swag mumblecore Schlitz flannel fingerstache narwhal readymade iPhone. Williamsburg tote bag lumbersexual, heirloom Godard VHS street art. Godard small batch fingerstache fashion axe distillery, migas cold-pressed locavore Neutra kogi messenger bag readymade. Typewriter PBR&B banjo, Carles readymade leggings viral Tumblr Austin butcher.</p>
 
 	<p>Mumblecore vegan narwhal, twee four loko YOLO actually chia asymmetrical. Trust fund polaroid Portland, Shoreditch stumptown High Life flannel mlkshk disrupt Williamsburg. Skateboard tote bag retro, health goth cred ugh brunch gentrify wayfarers Shoreditch. 8-bit jean shorts gentrify Truffaut Shoreditch, fingerstache ennui plaid put a bird on it Marfa fixie. Shoreditch ennui forage aesthetic, meh Blue Bottle kogi XOXO tote bag polaroid semiotics High Life. Bushwick aesthetic Neutra fixie. Meh actually roof party flannel Austin wayfarers.</p>
